# ClangShell

./: .gitignore  CMakeLists.txt  README.md
include/: builtins.h  compiler.h  execution_manager.h  input_manager.h  mode_manager.h  snippet_manager.h
src/: builtins.c  compiler.c  execution_manager.c  input_manager.c  mode_manager.c  shell.c  snippet_manager.c
